<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/covid_view"
        android:layout_width="@dimen/imageView_width"
        android:layout_height="@dimen/imageView_height"
        android:layout_marginTop="@dimen/marginTop_imageView"
        android:contentDescription="@string/covid_19"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_TextView"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/covid_view" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_imageView"
        android:text="@string/day"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/newCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_TextView"
        android:layout_marginStart="@dimen/marginStart"
        android:text="@string/new_cases"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <TextView
        android:id="@+id/activeCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_TextView"
        android:text="@string/active_cases"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/marginStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newCases" />

    <TextView
        android:id="@+id/criticalCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_TextView"
        android:text="@string/critical_cases"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/marginStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeCases" />

    <TextView
        android:id="@+id/recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_TextView"
        android:text="@string/recovered"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/marginStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/criticalCases" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_TextView"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/marginStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recovered" />
</androidx.constraintlayout.widget.ConstraintLayout>